# AgentGuard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
crates/agentguard-core/: Cargo.toml
crates/agentguard-core/src/: backup.rs  db.rs  effective.rs  env.rs  fs_scan.rs  gitignore.rs  inspect.rs  lib.rs  model.rs  paths.rs  policy.rs  profiles.rs  report.rs  risk.rs  settings.rs  settings_lint.rs  simulate.rs
docs/: architecture.md  claude-code-settings-plan.md  data-model.md  diagnostics-and-privacy.md  effective-policy.md  open-issues.md  policy-model.md  release-checklist.md  release-policy.md  requirements.md  risk-scanner.md  roadmap.md  security.md  tech-stack.md  ui-spec.md  user-guide.md
scripts/: build-docs.mjs  check-version.mjs  test-claude-permissions.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/lib/: describe.ts  ipc.ts  match.ts  modal.ts  policy-rule.test.ts  policy-rule.ts  state.svelte.ts  theme.svelte.ts  tooltip.ts  unsaved.test.ts  unsaved.ts  web-block.test.ts  web-block.ts
src/lib/components/: AgentConfigEditor.svelte  AgentSettingsForm.svelte  AgentSurface.svelte  ClaudeSettingsPanel.svelte  DiffViewer.svelte  EffectivePreview.svelte  FileExplorer.svelte  HelpButton.svelte  PolicyEditor.svelte  PolicySimulator.svelte  RawJsonEditor.svelte  RuleListEditor.svelte  SystemExplorer.svelte  SystemNode.svelte  TreeNode.svelte  UnsavedMarker.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/agent/: +page.svelte
src/routes/env/: +page.svelte
src/routes/guide/: +page.svelte
src/routes/project/: +page.svelte
src/routes/user/: +page.svelte
