[workspace]
members = ["crates/agentguard-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Agent Guard contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order: re-serializing a user's config must not reorder their keys.
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
