[package]
name = "agentguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure, Tauri-independent core logic for Agent Guard: policy model, settings conversion, effective-policy merge, risk scoring, and local storage."

[lib]
name = "agentguard_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
globset = "0.4"
ignore = "0.4"
directories = "5"
jsonschema = { version = "0.48.2", default-features = false }
